--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 	<link rel="stylesheet" href="css/familypromise.css">
 </head>
 <body>
+	<script>
+		window.onload = pageLoadedHandler;
+		function pageLoadedHandler (){
+			alert("How are you today?")
+		}
+
+
+	</script>
 	<header>
 		<!-- <div><img src="img/logo.png"></div> -->
 		<!-- <nav>
