--- a/whoweare.html
+++ b/whoweare.html
@@ -9,6 +9,12 @@
 
 </head>
 <body>
+	<script>
+		setTimeout(timerHandler,5000);
+		function timerHandler() {
+			alert("Do you need more time ?")
+		}
+	</script>
 	<header>
 		<div><img src="img/logo.png"></div>
 		<nav class="navbar navbar-default">
